workloads/litmus-hub/production-chart-litmuschaos-client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-chart-litmuschaos
  name: prod-chart-litmuschaos
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-chart-litmuschaos
  template:
    metadata:
      labels:
        app: prod-chart-litmuschaos
    spec:
      containers:
      - name: prod-chart-litmuschaos
        image: mayadata/charthub-litmuschaos-io:801d99
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
