workloads/litmus-hub/production-charts-litmuschaos-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-chart-litmuschaos-server
  name: prod-chart-litmuschaos-server
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-chart-litmuschaos-server
  template:
    metadata:
      labels:
        app: prod-chart-litmuschaos-server
    spec:
      containers:
      - name: prod-chart-litmuschaos-server
        image: litmuschaos/charthub-litmuschaos-io-server:61fb54
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/analytics
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
      volumes:
      - name: config-volume
        configMap:
          name: analytic-auth
