workloads/litmus-hub/staging-chart-litmuschaos-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stage-chart-litmuschaos-server
  name: stage-chart-litmuschaos-server
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stage-chart-litmuschaos-server
  template:
    metadata:
      labels:
        app: stage-chart-litmuschaos-server
    spec:
      containers:
      - name: stage-chart-litmuschaos-server
        image: mayadata/charthub-litmuschaos-io-stag-server:d6df99
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/analytics
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
      volumes:
      - name: config-volume
        configMap:
          name: analytic-auth
