workloads/litmus-hub/production-chart-litmuschaos-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-chart-litmuschaos
  name: prod-chart-litmuschaos-service
  namespace: litmuschaos
spec:
  ports:
  - name: prod-chart-litmuschaos
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: prod-chart-litmuschaos
