workloads/litmus-hub/production-chart-litmuschaos-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-chart-litmuschaos-server
  name: prod-chart-litmuschaos-server-service
  namespace: litmuschaos-website
spec:
  ports:
  - name: prod-chart-litmuschaos-server
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: prod-chart-litmuschaos-server
