workloads/litmus-hub/staging-chart-litmuschaos-svc-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stage-chart-litmuschaos-server
  name: stage-chart-litmuschaos-server-service
  namespace: litmuschaos-website
spec:
  ports:
  - name: stage-chart-litmuschaos-server
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: stage-chart-litmuschaos-server
