workloads/litmus-hub/chart-litmuschaos-staging-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod-maya-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "X-Robots-Tag:noindex, nofollow, nosnippet, noarchive";
  name: chart-litmuschaos-ingress
  namespace: litmuschaos-website
spec:
  rules:
  - host: staging-hub.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: stage-chart-litmuschaos-service
          servicePort: 80
        path: "/"
      - backend:
          serviceName: stage-chart-litmuschaos-server-service
          servicePort: 8080
        path: "/api/"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/"
  tls:
  - hosts:
    - staging-hub.litmuschaos.io
    secretName: chart-hub-litmuschaos-secrets
