workloads/litmus-hub/charts-litmuschaos-prod-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-litmus-website-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/tls-acme: "true"
    fluxcd.io/automated: "true"
    nginx.org/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: chart-litmuschaos-ingress-prod
  namespace: litmuschaos
spec:
  rules:
  - host: hub.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: prod-chart-litmuschaos-service
          servicePort: 80
        path: "/(.*)"
      - backend:
          serviceName: prod-chart-litmuschaos-server-service
          servicePort: 8080
        path: "/api/(.*)"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/(.*)"
  - host: www.hub.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: prod-chart-litmuschaos-service
          servicePort: 80
        path: "/(.*)"
      - backend:
          serviceName: prod-chart-litmuschaos-server-service
          servicePort: 8080
        path: "/api/(.*)"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/(.*)"
  tls:
  - hosts:
    - hub.litmuschaos.io
    - www.hub.litmuschaos.io
    secretName: charthub-litmuschaos-secrets-prod
